--- a/Components/VideoPlayer/videoplayer.less
+++ b/Components/VideoPlayer/videoplayer.less
@@ -171,10 +171,6 @@
 		align-items: center;
 		.Extendible();
 
-		&-muted {
-			margin-left: 0;
-		}
-
 		&-bar {
 			width: 100px;
 			padding: 5px;
@@ -189,6 +185,10 @@
 			width: 3ch;
 			opacity: .9;
 		}
+	}
+
+	&-timeduration{
+		white-space: nowrap;
 	}
 
 	&-pause {
