--- a/Components/VideoPlayer/VideoPlayer.razor.css
+++ b/Components/VideoPlayer/VideoPlayer.razor.css
@@ -178,9 +178,6 @@
   border-radius: 3px;
   background-color: rgba(255, 255, 255, 0.2);
 }
-.amc-videoplayer-volume-muted {
-  margin-left: 0;
-}
 .amc-videoplayer-volume-bar {
   width: 100px;
   padding: 5px;
@@ -192,6 +189,9 @@
 .amc-videoplayer-volume-value {
   width: 3ch;
   opacity: 0.9;
+}
+.amc-videoplayer-timeduration {
+  white-space: nowrap;
 }
 .amc-videoplayer-pause {
   display: none;
