--- a/Components/ProgressBar/progressbar.less
+++ b/Components/ProgressBar/progressbar.less
@@ -3,7 +3,7 @@
 .amc-progressbar {
 	--amc-progressbar-accentColor: #fff;
 	--amc-progressbar-seekbuttonSize: 20px;
-	.UnSelectable();
+	.ComponentsDefault();
 	display: grid;
 	grid-template-areas: 'left middle right';
 	grid-template-columns: 0 max-content 1fr;
