--- a/Components/General/css/common.less
+++ b/Components/General/css/common.less
@@ -13,3 +13,9 @@
 	-ms-user-select: none;
 	user-select: none;
 }
+
+.ComponentsDefault{
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: .9rem;
+	.UnSelectable();
+}
