--- a/Components/VideoPlayer/VideoPlayer.razor.css
+++ b/Components/VideoPlayer/VideoPlayer.razor.css
@@ -12,6 +12,15 @@
   -ms-user-select: none;
   user-select: none;
 }
+.ComponentsDefault {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.9rem;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
 .Extendible {
   border: 1px solid transparent;
 }
@@ -22,6 +31,8 @@
 }
 .amc-videoplayer {
   --amc-videoplayer-accentColor: #fff;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.9rem;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -moz-user-select: none;
