--- a/Components/VideoPlayer/videoplayer.less
+++ b/Components/VideoPlayer/videoplayer.less
@@ -12,7 +12,7 @@
 
 .amc-videoplayer {
 	--amc-videoplayer-accentColor: #fff;
-	.UnSelectable();
+	.ComponentsDefault();
 	position: relative;
 	display: flex;
 	flex-direction: column;
@@ -187,7 +187,7 @@
 		}
 	}
 
-	&-timeduration{
+	&-timeduration {
 		white-space: nowrap;
 	}
 
