--- a/Components/VideoPlayer/videoplayer.less
+++ b/Components/VideoPlayer/videoplayer.less
@@ -77,6 +77,24 @@
 	&-empty {
 		flex: 1;
 		cursor: pointer;
+		position: relative
+	}
+
+	&-close {
+		position: absolute;
+		top: 5px;
+		right: 20px;
+		color: #fff;
+		font-size: 50px;
+		border-radius: 50%;
+		display: inline-block;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+
+		span {
+			filter: drop-shadow(0 0 10px rgba(0, 0, 0, .8));
+		}
 	}
 
 	&-video {
