--- a/Test/Pages/Index.razor
+++ b/Test/Pages/Index.razor
@@ -1,5 +1,7 @@
 ﻿@page "/"
 
+<PageBase />
+
 @*<VideoPlayer Title="Welcome Lebanon :)" VideoUrl="https://angrymonkey.blob.core.windows.net/general/Good%20Morning%20Lebanon.mp4" Settings="@(
     new VideoPlayerSettings() {
     ShowVolumeButton = true
