--- a/Components/DateTimePicker/DateTimePicker.razor
+++ b/Components/DateTimePicker/DateTimePicker.razor
@@ -3,57 +3,26 @@
 
 <div class="amc-datetimepicker">
     <div class="amc-datetimepicker-calendar">
-        <div class="month">
-            <button class="prev" @onclick="OnPrevClick">Prev</button>
-            <div class="date">
-                @if (_prevMonthSelected)
-                {
-                    <span class="month-name">@prevSelectedMonthName</span>
-                    <span class="full-date">@prevMonthFullDate</span>
-                }
-                else
-                {
-                    <span class="month-name">@SelectedMonthName</span>
-                    <span class="full-date">@FullDate</span>
-                }
+        <div class="amc-datetimepicker-month">
+            <button class="amc-datetimepicker-previous" @onclick="OnPrevClick">Prev</button>
+            <div class="amc-datetimepicker-info">
+                <span class="amc-datetimepicker-monthname">@SelectedMonthName</span>
+                <span class="amc-datetimepicker-fulldate">@FullDate</span>
             </div>
-            <button class="next" @onclick="OnNextClick">Next</button>
+            <button class="amc-datetimepicker-next" @onclick="OnNextClick">Next</button>
         </div>
-        <div class="weekdays">
-            <div>Sun</div>
-            <div>Mon</div>
-            <div>Tue</div>
-            <div>Wed</div>
-            <div>Thu</div>
-            <div>Fri</div>
-            <div>Sat</div>
-        </div>
-        <div class="days">
-            @foreach (DateTimePickerDay day in Days)
-            {
-                if (!day.CurrentMonth)
-                {
-                    if (day.IsToday)
-                    {
-                        <div class="not-current-month today" @onclick="() => ChangeDayOfCurrentMonth(day.Value)">@day.Value</div>
-                    }
-                    else
-                    {
-                        <div class="not-current-month" @onclick="() => ChangeDayOfPreviousMonth(day.Value)">@day.Value</div>
-                    }
-                }
-                else
-                {
-                    if (day.IsToday)
-                    {
-                        <div class="today" @onclick="() => ChangeDayOfCurrentMonth(day.Value)">@day.Value</div>
-                    }
-                    else
-                    {
-                        <div @onclick="() => ChangeDayOfCurrentMonth(day.Value)">@day.Value</div>
-                    }
-                }
 
+        <div class="amc-datetimepicker-weekdays">
+            @foreach(string weekday in WeekDaysNames)
+            {
+                <div>@weekday</div>
+            }
+        </div>
+
+        <div class="amc-datetimepicker-days">
+            @foreach (DateTimePickerDate date in Days)
+            {
+                <div class="amc-datetimepicker-day @date.Classes" @onclick="() => OnDateSelected(date)">@date.Day</div>
             }
         </div>
     </div>
