--- a/Components/DateTimePicker/DateTimePicker.less
+++ b/Components/DateTimePicker/DateTimePicker.less
@@ -1,100 +1,99 @@
-﻿.amc-datetimepicker {
-    font-size: 10px;
-    width: 100%;
-    height: 100vh;
-    background-color: #12121f;
-    color: #eee;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+﻿@import "../General/css/common.less";
 
-    &-calendar {
-        width: 45rem;
-        height: 52rem;
-        background-color: #222227;
-        box-shadow: 0 0.5rem 3rem rgba(0,0,0,0.4);
+.amc-datetimepicker {
+	.ComponentsDefault();
+	background-color: #12121f;
+	color: #eee;
 
-        .month {
-            width: 100%;
-            height: 12rem;
-            background-color: green;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            text-align: center;
-            text-shadow: 0 0.3rem 0.5rem rgba(0,0,0,0.5);
+	&-calendar {
+		background-color: #222227;
+		box-shadow: 0 0.5rem 3rem rgba(0,0,0,0.4);
+	}
 
-            button {
-                cursor: pointer;
-            }
+	&-weekdays {
+		height: 5rem;
+		padding: 0 0.4rem;
+		display: flex;
+		align-items: center;
 
-            .date {
-                display: flex;
-                flex-direction: column;
+		div {
+			font-size: 1.5rem;
+			font-weight: 400;
+			letter-spacing: 0.1rem;
+			width: calc(44.2rem / 7);
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
+		}
+	}
 
-                .month-name {
-                    font-size: 2rem;
-                    font-weight: 400;
-                    text-transform: uppercase;
-                    letter-spacing: 0.2rem;
-                    margin-bottom: 1rem;
-                }
+	&-info {
+		display: flex;
+		flex-direction: column;
+	}
 
-                .full-date {
-                    font-size: 1.6rem;
-                }
-            }
-        }
+	&-monthname {
+		font-size: 2rem;
+		font-weight: 400;
+		text-transform: uppercase;
+		letter-spacing: 0.2rem;
+		margin-bottom: 1rem;
+	}
 
-        .weekdays {
-            width: 100%;
-            height: 5rem;
-            padding: 0 0.4rem;
-            display: flex;
-            align-items: center;
+	&-fulldate {
+		font-size: 1.6rem;
+	}
 
-            div {
-                font-size: 1.5rem;
-                font-weight: 400;
-                letter-spacing: 0.1rem;
-                width: calc(44.2rem / 7);
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
-            }
-        }
+	&-month {
+		width: 100%;
+		height: 12rem;
+		background-color: green;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		text-align: center;
+		text-shadow: 0 0.3rem 0.5rem rgba(0,0,0,0.5);
 
-        .days {
-            width: 100%;
-            display: flex;
-            flex-wrap: wrap;
-            padding: 0.2rem;
+		button {
+			cursor: pointer;
+		}
+	}
 
-            div {
-                font-size: 1.4rem;
-                margin: 0.3rem;
-                width: calc(40.4rem / 7);
-                height: 5rem;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                text-shadow: 0 0.3rem 0.5rem rgba(0,0,0,0.5);
-                transition: background-color 0.2s;
+	&-days {
+		padding: 0.2rem;
+		display: grid;
+		grid-template-columns: repeat(7, 1fr);
+	}
 
-                &:hover:not(.today){
-                    background-color:#262626;
-                    cursor:pointer; 
-                }    
-            }
+	&-day {
+		font-size: 1.4rem;
+		margin: 0.3rem;
+		width: calc(40.4rem / 7);
+		height: 5rem;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		text-shadow: 0 0.3rem 0.5rem rgba(0,0,0,0.5);
+		transition: background-color 0.2s;
+		opacity: 0.5;
+		border: 1px solid transparent;
 
-            .not-current-month{
-                opacity:0.5;
-            }
-            
-            .today {
-                background-color: green;
-            }
-        }
-    }
+		&:hover:not(._selected) {
+			background-color: #262626;
+			cursor: pointer;
+		}
+
+		&._currentmonth {
+			opacity: 1;
+		}
+
+		&._selected {
+			background-color: green;
+		}
+
+		&._today {
+			border-color: green;
+		}
+	}
 }
