--- a/Components/DateTimePicker/DateTimePicker.razor.css
+++ b/Components/DateTimePicker/DateTimePicker.razor.css
@@ -1,54 +1,64 @@
+.Selectable {
+  -webkit-touch-callout: initial;
+  -webkit-user-select: text;
+  -moz-user-select: text;
+  -ms-user-select: text;
+  user-select: text;
+}
+.UnSelectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.ComponentsDefault {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.9rem;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.ComponentsDefault button,
+.ComponentsDefault button:active,
+.ComponentsDefault button:focus,
+.ComponentsDefault button:visited {
+  outline: none !important;
+  border: none;
+  border-radius: 0;
+}
 .amc-datetimepicker {
-  font-size: 10px;
-  width: 100%;
-  height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.9rem;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   background-color: #12121f;
   color: #eee;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+}
+.amc-datetimepicker button,
+.amc-datetimepicker button:active,
+.amc-datetimepicker button:focus,
+.amc-datetimepicker button:visited {
+  outline: none !important;
+  border: none;
+  border-radius: 0;
 }
 .amc-datetimepicker-calendar {
-  width: 45rem;
-  height: 52rem;
   background-color: #222227;
   box-shadow: 0 0.5rem 3rem rgba(0, 0, 0, 0.4);
 }
-.amc-datetimepicker-calendar .month {
-  width: 100%;
-  height: 12rem;
-  background-color: green;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  text-align: center;
-  text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
-}
-.amc-datetimepicker-calendar .month button {
-  cursor: pointer;
-}
-.amc-datetimepicker-calendar .month .date {
-  display: flex;
-  flex-direction: column;
-}
-.amc-datetimepicker-calendar .month .date .month-name {
-  font-size: 2rem;
-  font-weight: 400;
-  text-transform: uppercase;
-  letter-spacing: 0.2rem;
-  margin-bottom: 1rem;
-}
-.amc-datetimepicker-calendar .month .date .full-date {
-  font-size: 1.6rem;
-}
-.amc-datetimepicker-calendar .weekdays {
-  width: 100%;
+.amc-datetimepicker-weekdays {
   height: 5rem;
   padding: 0 0.4rem;
   display: flex;
   align-items: center;
 }
-.amc-datetimepicker-calendar .weekdays div {
+.amc-datetimepicker-weekdays div {
   font-size: 1.5rem;
   font-weight: 400;
   letter-spacing: 0.1rem;
@@ -58,13 +68,39 @@
   align-items: center;
   text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
 }
-.amc-datetimepicker-calendar .days {
-  width: 100%;
+.amc-datetimepicker-info {
   display: flex;
-  flex-wrap: wrap;
-  padding: 0.2rem;
+  flex-direction: column;
 }
-.amc-datetimepicker-calendar .days div {
+.amc-datetimepicker-monthname {
+  font-size: 2rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  margin-bottom: 1rem;
+}
+.amc-datetimepicker-fulldate {
+  font-size: 1.6rem;
+}
+.amc-datetimepicker-month {
+  width: 100%;
+  height: 12rem;
+  background-color: green;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
+}
+.amc-datetimepicker-month button {
+  cursor: pointer;
+}
+.amc-datetimepicker-days {
+  padding: 0.2rem;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+}
+.amc-datetimepicker-day {
   font-size: 1.4rem;
   margin: 0.3rem;
   width: calc(40.4rem / 7);
@@ -74,14 +110,19 @@
   align-items: center;
   text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
   transition: background-color 0.2s;
+  opacity: 0.5;
+  border: 1px solid transparent;
 }
-.amc-datetimepicker-calendar .days div:hover:not(.today) {
+.amc-datetimepicker-day:hover:not(._selected) {
   background-color: #262626;
   cursor: pointer;
 }
-.amc-datetimepicker-calendar .days .not-current-month {
-  opacity: 0.5;
+.amc-datetimepicker-day._currentmonth {
+  opacity: 1;
 }
-.amc-datetimepicker-calendar .days .today {
+.amc-datetimepicker-day._selected {
   background-color: green;
+}
+.amc-datetimepicker-day._today {
+  border-color: green;
 }
