--- a/Components/PageBase/PageBase.razor
+++ b/Components/PageBase/PageBase.razor
@@ -2,7 +2,7 @@
 @inject IJSRuntime jsRuntime
 @inject PageBaseSettings pageSettings
 
-<div>
+<!--<div>
     1: @pageSettings.BuildID
 </div>
 <div>
@@ -10,4 +10,4 @@
 </div>
 <div>
     3: @pageSettings.BuildID
-</div>
+</div>-->
