DateTimePicker: fixed all bugs related to previous and next month + UI: added the current year next to the month name in the header

--- a/Components/DateTimePicker/DateTimePicker.razor
+++ b/Components/DateTimePicker/DateTimePicker.razor
@@ -6,7 +6,7 @@
         <div class="amc-datetimepicker-month">
             <button class="amc-datetimepicker-previous" @onclick="OnPrevClick">Prev</button>
             <div class="amc-datetimepicker-info">
-                <span class="amc-datetimepicker-monthname">@SelectedMonthName</span>
+                <span class="amc-datetimepicker-monthname">@SelectedMonthName @SelectedYear</span>
                 <span class="amc-datetimepicker-fulldate">@FullDate</span>
             </div>
             <button class="amc-datetimepicker-next" @onclick="OnNextClick">Next</button>
