--- a/Components/DateTimePicker/DateTimePicker.less
+++ b/Components/DateTimePicker/DateTimePicker.less
@@ -1,99 +1,215 @@
 ﻿@import "../General/css/common.less";
 
 .amc-datetimepicker {
-	.ComponentsDefault();
-	background-color: #12121f;
-	color: #eee;
+    .ComponentsDefault();
+    background-color: #12121f;
+    color: #eee;
 
-	&-calendar {
-		background-color: #222227;
-		box-shadow: 0 0.5rem 3rem rgba(0,0,0,0.4);
-	}
+    &-calendar {
+        background-color: #222227;
+        box-shadow: 0 0.5rem 3rem rgba(0,0,0,0.4);
+    }
 
-	&-weekdays {
-		height: 5rem;
-		padding: 0 0.4rem;
-		display: flex;
-		align-items: center;
+    &-weekdays {
+        height: 50px;
+        padding: 0 4px;
+        display: flex;
+        align-items: center;
 
-		div {
-			font-size: 1.5rem;
-			font-weight: 400;
-			letter-spacing: 0.1rem;
-			width: calc(44.2rem / 7);
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
-		}
-	}
+        div {
+            font-size: 1.5rem;
+            font-weight: 400;
+            letter-spacing: 1px;
+            width: calc(600px / 7);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-shadow: 0 3px 5px rgba(0, 0, 0, 0.5);
+        }
+    }
 
-	&-info {
-		display: flex;
-		flex-direction: column;
-	}
+    &-info {
+        display: flex;
+        flex-direction: column;
+    }
 
-	&-monthname {
-		font-size: 2rem;
-		font-weight: 400;
-		text-transform: uppercase;
-		letter-spacing: 0.2rem;
-		margin-bottom: 1rem;
-	}
+    &-monthname {
+        font-size: 2rem;
+        font-weight: 400;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        margin-bottom: 10px;
+        cursor: pointer;
 
-	&-fulldate {
-		font-size: 1.6rem;
-	}
+        &:hover {
+            opacity: 1.8;
+        }
+    }
 
-	&-month {
-		width: 100%;
-		height: 12rem;
-		background-color: green;
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-		text-align: center;
-		text-shadow: 0 0.3rem 0.5rem rgba(0,0,0,0.5);
+    &-fulldate {
+        font-size: 1.6rem;
+    }
 
-		button {
-			cursor: pointer;
-		}
-	}
+    &-month {
+        width: 100%;
+        height: 120px;
+        background-color: green;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        text-align: center;
+        text-shadow: 0 3px 5px rgba(0,0,0,0.5);
 
-	&-days {
-		padding: 0.2rem;
-		display: grid;
-		grid-template-columns: repeat(7, 1fr);
-	}
+        button {
+            cursor: pointer;
+        }
+    }
 
-	&-day {
-		font-size: 1.4rem;
-		margin: 0.3rem;
-		width: calc(40.4rem / 7);
-		height: 5rem;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		text-shadow: 0 0.3rem 0.5rem rgba(0,0,0,0.5);
-		transition: background-color 0.2s;
-		opacity: 0.5;
-		border: 1px solid transparent;
+    &-days {
+        padding: 2px;
+        display: grid;
+        grid-template-columns: repeat(7, 1fr);
+    }
 
-		&:hover:not(._selected) {
-			background-color: #262626;
-			cursor: pointer;
-		}
+    &-day {
+        font-size: 1.4rem;
+        margin: 3px;
+        width: calc(440px / 7);
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-shadow: 0 3px 5px rgba(0,0,0,0.5);
+        transition: background-color 0.2s;
+        opacity: 0.5;
+        border: 1px solid transparent;
 
-		&._currentmonth {
-			opacity: 1;
-		}
+        &:hover:not(._selected) {
+            background-color: #262626;
+            cursor: pointer;
+        }
 
-		&._selected {
-			background-color: green;
-		}
+        &._currentmonth {
+            opacity: 1;
+        }
 
-		&._today {
-			border-color: green;
-		}
-	}
+        &._selected {
+            background-color: green;
+        }
+
+        &._today {
+            border-color: green;
+        }
+    }
+
+    &-pickingyear {
+        width: 608px;
+        height: 120px;
+        background-color: green;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        text-align: center;
+        text-shadow: 0 3px 5px rgba(0,0,0,0.5);
+
+        button {
+            cursor: pointer;
+        }
+    }
+
+    &-highlightedyear {
+        color: white;
+        font-weight: bold;
+        background-color: green;
+        border: none;
+        font-size: 2rem;
+        font-weight: 400;
+        letter-spacing: 2px;
+        margin-bottom: 10px;
+    }
+
+    &-pickingmonths {
+        padding: 2px;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    &-pickingmonth {
+        font-size: 1.4rem;
+        margin: 3px;
+        width: calc(440px / 4);
+        height: 80px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-shadow: 0 3px 5px rgba(0,0,0,0.5);
+        transition: background-color 0.2s;
+        border: 1px solid transparent;
+        cursor: pointer;
+
+        &:hover {
+            border-color: green;
+        }
+
+        &._monthselected {
+            background-color: green;
+        }
+    }
+
+    &-pickingdecade {
+        width: 608px;
+        height: 120px;
+        background-color: green;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        text-align: center;
+        text-shadow: 0 3px 5px rgba(0,0,0,0.5);
+
+        button {
+            cursor: pointer;
+        }
+    }
+
+    &-highlighteddecade {
+        color: white;
+        font-weight: bold;
+        font-size: 2rem;
+        font-weight: 400;
+        letter-spacing: 2px;
+        margin-bottom: 10px;
+    }
+
+    &-pickingdecadeyears {
+        padding: 2px;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    &-decadeyears {
+        font-size: 1.4rem;
+        margin: 3px;
+        width: calc(440px / 4);
+        height: 80px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-shadow: 0 3px 5px rgba(0,0,0,0.5);
+        transition: background-color 0.2s;
+        border: 1px solid transparent;
+        cursor: pointer;
+        opacity: 0.5;
+
+        &:hover {
+            border-color: green;
+        }
+
+        &._currentyear {
+            background-color: green;
+        }
+
+        &._currentdecade {
+            opacity: 1;
+        }
+    }
 }
