--- a/Components/DateTimePicker/DateTimePicker.razor.css
+++ b/Components/DateTimePicker/DateTimePicker.razor.css
@@ -53,20 +53,20 @@
   box-shadow: 0 0.5rem 3rem rgba(0, 0, 0, 0.4);
 }
 .amc-datetimepicker-weekdays {
-  height: 5rem;
-  padding: 0 0.4rem;
+  height: 50px;
+  padding: 0 4px;
   display: flex;
   align-items: center;
 }
 .amc-datetimepicker-weekdays div {
   font-size: 1.5rem;
   font-weight: 400;
-  letter-spacing: 0.1rem;
-  width: calc(44.2rem / 7);
+  letter-spacing: 1px;
+  width: calc(600px / 7);
   display: flex;
   justify-content: center;
   align-items: center;
-  text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
+  text-shadow: 0 3px 5px rgba(0, 0, 0, 0.5);
 }
 .amc-datetimepicker-info {
   display: flex;
@@ -76,39 +76,43 @@
   font-size: 2rem;
   font-weight: 400;
   text-transform: uppercase;
-  letter-spacing: 0.2rem;
-  margin-bottom: 1rem;
+  letter-spacing: 2px;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+.amc-datetimepicker-monthname:hover {
+  opacity: 1.8;
 }
 .amc-datetimepicker-fulldate {
   font-size: 1.6rem;
 }
 .amc-datetimepicker-month {
   width: 100%;
-  height: 12rem;
+  height: 120px;
   background-color: green;
   display: flex;
   justify-content: space-between;
   align-items: center;
   text-align: center;
-  text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
+  text-shadow: 0 3px 5px rgba(0, 0, 0, 0.5);
 }
 .amc-datetimepicker-month button {
   cursor: pointer;
 }
 .amc-datetimepicker-days {
-  padding: 0.2rem;
+  padding: 2px;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
 }
 .amc-datetimepicker-day {
   font-size: 1.4rem;
-  margin: 0.3rem;
-  width: calc(40.4rem / 7);
-  height: 5rem;
+  margin: 3px;
+  width: calc(440px / 7);
+  height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
-  text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
+  text-shadow: 0 3px 5px rgba(0, 0, 0, 0.5);
   transition: background-color 0.2s;
   opacity: 0.5;
   border: 1px solid transparent;
@@ -125,4 +129,100 @@
 }
 .amc-datetimepicker-day._today {
   border-color: green;
+}
+.amc-datetimepicker-pickingyear {
+  width: 608px;
+  height: 120px;
+  background-color: green;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  text-shadow: 0 3px 5px rgba(0, 0, 0, 0.5);
+}
+.amc-datetimepicker-pickingyear button {
+  cursor: pointer;
+}
+.amc-datetimepicker-highlightedyear {
+  color: white;
+  font-weight: bold;
+  background-color: green;
+  border: none;
+  font-size: 2rem;
+  font-weight: 400;
+  letter-spacing: 2px;
+  margin-bottom: 10px;
+}
+.amc-datetimepicker-pickingmonths {
+  padding: 2px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+.amc-datetimepicker-pickingmonth {
+  font-size: 1.4rem;
+  margin: 3px;
+  width: calc(440px / 4);
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-shadow: 0 3px 5px rgba(0, 0, 0, 0.5);
+  transition: background-color 0.2s;
+  border: 1px solid transparent;
+  cursor: pointer;
+}
+.amc-datetimepicker-pickingmonth:hover {
+  border-color: green;
+}
+.amc-datetimepicker-pickingmonth._monthselected {
+  background-color: green;
+}
+.amc-datetimepicker-pickingdecade {
+  width: 608px;
+  height: 120px;
+  background-color: green;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  text-shadow: 0 3px 5px rgba(0, 0, 0, 0.5);
+}
+.amc-datetimepicker-pickingdecade button {
+  cursor: pointer;
+}
+.amc-datetimepicker-highlighteddecade {
+  color: white;
+  font-weight: bold;
+  font-size: 2rem;
+  font-weight: 400;
+  letter-spacing: 2px;
+  margin-bottom: 10px;
+}
+.amc-datetimepicker-pickingdecadeyears {
+  padding: 2px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+.amc-datetimepicker-decadeyears {
+  font-size: 1.4rem;
+  margin: 3px;
+  width: calc(440px / 4);
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-shadow: 0 3px 5px rgba(0, 0, 0, 0.5);
+  transition: background-color 0.2s;
+  border: 1px solid transparent;
+  cursor: pointer;
+  opacity: 0.5;
+}
+.amc-datetimepicker-decadeyears:hover {
+  border-color: green;
+}
+.amc-datetimepicker-decadeyears._currentyear {
+  background-color: green;
+}
+.amc-datetimepicker-decadeyears._currentdecade {
+  opacity: 1;
 }
