--- a/Components/DateTimePicker/DateTimePicker.razor
+++ b/Components/DateTimePicker/DateTimePicker.razor
@@ -2,18 +2,31 @@
 
 
 <div class="amc-datetimepicker">
-    <div class="amc-datetimepicker-calendar">
-        @if (!selectingNewDate)
-        {
-            <div class="amc-datetimepicker-month">
-                <button class="amc-datetimepicker-previous" @onclick="OnPrevClick">Prev</button>
-                <div class="amc-datetimepicker-info">
-                    <span class="amc-datetimepicker-monthname" @onclick="SelectNewDate">@SelectedMonthName @SelectedYear</span>
-                    <span class="amc-datetimepicker-fulldate">@FullDate</span>
-                </div>
-                <button class="amc-datetimepicker-next" @onclick="OnNextClick">Next</button>
-            </div>
+    <div class="amc-datetimepicker-header">
+        <div class="amc-datetimepicker-selecteddate">@SelectedDateDisplay</div>
 
+        <div class="amc-datetimepicker-selection">
+            <button class="amc-datetimepicker-selection-previous" @onclick="OnPrevClick">‹</button>
+            <div class="amc-datetimepicker-selection-info">
+                @if (SelectionState == DateTimePickerSelectionState.Day)
+                {
+                    <span @onclick="ChangeSelectionState">@SelectedMonthName @SelectedYear</span>
+                }
+                else if (SelectionState == DateTimePickerSelectionState.Month)
+                {
+                    <span class="amc-datetimepicker-highlightedyear" @onclick="ChangeSelectionState">@SelectingYear</span>
+                }
+                else
+                {
+                    <span class="amc-datetimepicker-highlighteddecade">@StartCurrentDecadeYear - @EndCurrentDecadeYear</span>
+                }
+            </div>
+            <button class="amc-datetimepicker-selection-next" @onclick="OnNextClick">›</button>
+        </div>
+    </div>
+    <div class="amc-datetimepicker-calendar">
+        @if (SelectionState == DateTimePickerSelectionState.Day)
+        {
             <div class="amc-datetimepicker-weekdays">
                 @foreach (string weekday in WeekDaysNames)
                 {
@@ -28,50 +41,46 @@
                 }
             </div>
         }
-        else
+        else if (SelectionState == DateTimePickerSelectionState.Month)
         {
-            if (!selectingNewYears)
-            {
-                <div class="amc-datetimepicker-pickingyear">
+            @*<div class="amc-datetimepicker-pickingyear">
                     <button class="amc-datetimepicker-previousyear" @onclick="OnPrevYearClick">Prev</button>
                     <div class="amc-datetimepicker-year">
                         <button class="amc-datetimepicker-highlightedyear" @onclick="SelectNewYears">@SelectingYear</button>
                     </div>
                     <button class="amc-datetimepicker-nextyear" @onclick="OnNextYearClick">Next</button>
-                </div>
+                </div>*@
 
-                <div class="amc-datetimepicker-pickingmonths">
-                    @foreach (string month in MonthNames)
+            <div class="amc-datetimepicker-pickingmonths">
+                @foreach (string month in MonthNames)
+                {
+                    if (month.Equals(MonthNames[SelectedDate.Month - 1]) && SelectingYear == SelectedDate.Year)
                     {
-                        if (month.Equals(MonthNames[SelectedMonth - 1]) && SelectedYear == SelectingYear)
-                        {
-                            <div class="amc-datetimepicker-pickingmonth _monthselected" @onclick="() => SelectedNewDate(month)">@month</div>
-                        }
-                        else
-                        {
-                            <div class="amc-datetimepicker-pickingmonth" @onclick="() => SelectedNewDate(month)">@month</div>
-                        }
+                        <div class="amc-datetimepicker-pickingmonth _monthselected" @onclick="() => SelectedNewDate(month)">@month</div>
                     }
-                </div>
-            }
-            else
-            {
-                <div class="amc-datetimepicker-pickingdecade">
+                    else
+                    {
+                        <div class="amc-datetimepicker-pickingmonth" @onclick="() => SelectedNewDate(month)">@month</div>
+                    }
+                }
+            </div>
+        }
+        else
+        {
+            @*<div class="amc-datetimepicker-pickingdecade">
                     <button class="amc-datetimepicker-previousdeacde" @onclick="OnPrevDecadeClick">Prev</button>
                     <div class="amc-datetimepicker-decade">
                         <span class="amc-datetimepicker-highlighteddecade">@StartCurrentDecadeYear - @EndCurrentDecadeYear</span>
                     </div>
                     <button class="amc-datetimepicker-nextdecade" @onclick="OnNextDecadeClick">Next</button>
-                </div>
+                </div>*@
 
-                <div class="amc-datetimepicker-pickingdecadeyears">
-                    @foreach (DecadeYears decade in Decade)
-                    {
-                        <div class="amc-datetimepicker-decadeyears @decade.Classes" @onclick="() => SetSelectingYear(decade.Year)">@decade.Year</div>
-                    }
-                </div>
-            }
+            <div class="amc-datetimepicker-pickingdecadeyears">
+                @foreach (DecadeYears decade in Decade)
+                {
+                    <div class="amc-datetimepicker-decadeyears @decade.Classes" @onclick="() => SetSelectingYear(decade.Year)">@decade.Year</div>
+                }
+            </div>
         }
-
     </div>
 </div>
