--- a/Demo/wwwroot/site.css
+++ b/Demo/wwwroot/site.css
@@ -9,6 +9,12 @@ main > .amc-progressbar {
 	margin-top: 50px;
 }
 
+main > .amc-datetimepicker {
+	width: 600px;
+	margin-left: 50px;
+	margin-top: 50px;
+}
+
 body {
 	height: 100vh;
 	background-image: url(/bg.jpg);
