DateTimePicker: Refactored Razor and cs classes

--- a/Components/DateTimePicker/DateTimePicker.less
+++ b/Components/DateTimePicker/DateTimePicker.less
@@ -8,7 +8,45 @@
 
     &-calendar {
         background-color: #222227;
-        box-shadow: 0 0.5rem 3rem rgba(0,0,0,0.4);
+    }
+
+    &-header {
+        width: 100%;
+        height: 120px;
+        background-color: var(--amc-datetimepicker-accentColor);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    &-selection {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+        button {
+            border: none;
+            background-color: transparent !important;
+            padding: 10px;
+            font-weight: bold;
+        }
+    }
+
+    &-selecteddate {
+        font-size: 1.6rem;
+    }
+
+    &-highlighteddate,
+    &-highlightedyear,
+    &-highlighteddecade{
+        font-size: 1.5rem;
+        font-weight: 400;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        padding:10px;
+        margin-bottom: 5px;
+        cursor:pointer;
     }
 
     &-weekdays {
