--- a/Components/DateTimePicker/DateTimePicker.razor
+++ b/Components/DateTimePicker/DateTimePicker.razor
@@ -8,77 +8,45 @@
         <div class="amc-datetimepicker-selection">
             <button class="amc-datetimepicker-selection-previous" @onclick="OnPrevClick">‹</button>
             <div class="amc-datetimepicker-selection-info">
-                @if (SelectionState == DateTimePickerSelectionState.Day)
-                {
-                    <span @onclick="ChangeSelectionState">@SelectedMonthName @SelectedYear</span>
-                }
-                else if (SelectionState == DateTimePickerSelectionState.Month)
-                {
-                    <span class="amc-datetimepicker-highlightedyear" @onclick="ChangeSelectionState">@SelectingYear</span>
-                }
-                else
-                {
-                    <span class="amc-datetimepicker-highlighteddecade">@StartCurrentDecadeYear - @EndCurrentDecadeYear</span>
-                }
+                <span @onclick="ChangeSelectionState">@DisplaySelectionInfo</span>
             </div>
             <button class="amc-datetimepicker-selection-next" @onclick="OnNextClick">›</button>
         </div>
     </div>
-    <div class="amc-datetimepicker-calendar">
+    <div class="amc-datetimepicker-body">
         @if (SelectionState == DateTimePickerSelectionState.Day)
         {
-            <div class="amc-datetimepicker-weekdays">
-                @foreach (string weekday in WeekDaysNames)
-                {
-                    <div>@weekday</div>
-                }
-            </div>
+            <div class="amc-datetimepicker-calendar">
+                <div class="amc-datetimepicker-calendar-weekdays">
+                    @foreach (string weekday in WeekDaysNames)
+                    {
+                        <div>@weekday</div>
+                    }
+                </div>
 
-            <div class="amc-datetimepicker-days">
-                @foreach (DateTimePickerDate date in Days)
-                {
-                    <div class="amc-datetimepicker-day @date.Classes" @onclick="() => OnDateSelected(date)">@date.Day</div>
-                }
+                <div class="amc-datetimepicker-calendar-days">
+                    @foreach (DateTimePickerDate date in Days)
+                    {
+                        <div class="amc-datetimepicker-calendar-day @date.Classes" @onclick="() => OnDateSelected(date)">@date.Day</div>
+                    }
+                </div>
             </div>
         }
         else if (SelectionState == DateTimePickerSelectionState.Month)
         {
-            @*<div class="amc-datetimepicker-pickingyear">
-                    <button class="amc-datetimepicker-previousyear" @onclick="OnPrevYearClick">Prev</button>
-                    <div class="amc-datetimepicker-year">
-                        <button class="amc-datetimepicker-highlightedyear" @onclick="SelectNewYears">@SelectingYear</button>
-                    </div>
-                    <button class="amc-datetimepicker-nextyear" @onclick="OnNextYearClick">Next</button>
-                </div>*@
-
-            <div class="amc-datetimepicker-pickingmonths">
-                @foreach (string month in MonthNames)
+            <div class="amc-datetimepicker-months">
+                @foreach (DateTimePickerMonth month in Months)
                 {
-                    if (month.Equals(MonthNames[SelectedDate.Month - 1]) && SelectingYear == SelectedDate.Year)
-                    {
-                        <div class="amc-datetimepicker-pickingmonth _monthselected" @onclick="() => SelectedNewDate(month)">@month</div>
-                    }
-                    else
-                    {
-                        <div class="amc-datetimepicker-pickingmonth" @onclick="() => SelectedNewDate(month)">@month</div>
-                    }
+                    <div class="amc-datetimepicker-months-month @month.Classes" @onclick="() => OnMonthSelected(month.Month)">@month.Name</div>
                 }
             </div>
         }
         else
         {
-            @*<div class="amc-datetimepicker-pickingdecade">
-                    <button class="amc-datetimepicker-previousdeacde" @onclick="OnPrevDecadeClick">Prev</button>
-                    <div class="amc-datetimepicker-decade">
-                        <span class="amc-datetimepicker-highlighteddecade">@StartCurrentDecadeYear - @EndCurrentDecadeYear</span>
-                    </div>
-                    <button class="amc-datetimepicker-nextdecade" @onclick="OnNextDecadeClick">Next</button>
-                </div>*@
-
-            <div class="amc-datetimepicker-pickingdecadeyears">
-                @foreach (DecadeYears decade in Decade)
+            <div class="amc-datetimepicker-years">
+                @foreach (DateTimePickerYear year in Years)
                 {
-                    <div class="amc-datetimepicker-decadeyears @decade.Classes" @onclick="() => SetSelectingYear(decade.Year)">@decade.Year</div>
+                    <div class="amc-datetimepicker-years-year @year.Classes" @onclick="() => OnYearSelected(year.Year)">@year.Year</div>
                 }
             </div>
         }
